[package]
name = "fluxplayercli"
version = "0.1.0"
authors = ["fluxth <contact@fluxthitat.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portaudio = "0.7"
ffmpeg = { git = "git://github.com/meh/rust-ffmpeg.git", branch = "master" }
libsoxr = "0.2"
ringbuf = "0.2"
